Finalizada Secao 4 de MIgrations Asp net core com angular

--- a/QuickyBuy.Web/appsettings.json
+++ b/QuickyBuy.Web/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "QuickyBuyDB": "Server=localhost;userid=hoot;password=Senh@178921R;database=QuickyBuyDB;"
+  }
 }
