--- a/QuickyBuy.Web/QuickyBuy.Web.csproj
+++ b/QuickyBuy.Web/QuickyBuy.Web.csproj
@@ -25,7 +25,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="ClientApp\src\app\produto\produto.components.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\QuickyBuy.Repositorio\QuickyBuy.Repositorio.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\src\app\produto\produto.components.ts" />
   </ItemGroup>
 
   <ItemGroup>
